rewrite the page logic for quiz apis